--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "webauth-iii-challenge",
+  "name": "webauth-i-challenge",
   "version": "1.0.0",
   "description": "## Topics",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon run server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bryce-Soghigian/webauth-i-challenge.git"
+  },
+  "keywords": [],
+  "author": "Bryce",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Bryce-Soghigian/webauth-i-challenge/issues"
+  },
+  "homepage": "https://github.com/Bryce-Soghigian/webauth-i-challenge#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-session-knex": "^1.4.0",
@@ -10,24 +25,10 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "helmet": "^3.20.0",
-    "knex": "^0.19.2",
-    "nodemon": "^1.19.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.19.1",
+    "sqlite": "^3.0.3",
     "sqlite3": "^4.1.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bryce-Soghigian/webauth-iii-challenge.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Bryce-Soghigian/webauth-iii-challenge/issues"
-  },
-  "homepage": "https://github.com/Bryce-Soghigian/webauth-iii-challenge#readme"
+  "devDependencies": {}
 }
